--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -18,6 +18,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  @media screen and (max-width: 758px) {
+    display: none;
+  }
 }
 
 .walletIcon {
