--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -15,4 +15,28 @@
     display: flex;
     flex-direction: column;
   }
+
+  .linkWrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .buttonLink {
+      margin: 5px;
+      padding: 6px 10px;
+      font-size: 16px;
+      color: black;
+      font-weight: 600;
+      border-radius: 4px;
+      border: solid 1px lightgray;
+      background: whitesmoke;
+      transition: background 0.5s;
+      cursor: pointer;
+      &:hover {
+        background: lightgray;
+      }
+    }
+  }
 }
